FreeST/test/Programs/ValidTests/SessionTypes/dupConsChan/dupConsChan.fst
data T = A | B

type C = &{A: Skip, B: Skip}

main : T
main = A
