FreeST/test/Programs/InvalidTests/ParseErrors/dupTypeData/dupTypeData.fst
type T = Int

data T = C
